- Clarified that the "The Truth Comes Crashing Down" prequest comes from an item, not from EPL Town
- Added the "Frostwolf Insignia" items as required for the AV Reputation quests, so the companion will loot it from the bank.
- Required item count from ignored quests is no longed added to the needed count on the Items tab, if a nonignored quest also needed that item.

3.22 (2026-01-29)
- Finished RXP Turn-in guide for Solo Route.
- Added "Tranquillien, Ghostlands" as a required flight path for Solo route, as it links Silvermoon to EPL.
- Added back "Summoning Shadra" as a prequest to "Venom to the Undercity"
- SoloRoute Companion: Removed "Winterspring" as a mail pick-up spot, added "Stonard" as a mail pick-up spot. Now it matches the other routes.
- Companion: "Collect" button for step 1 (bags) can now collect the Tier 0.5 items from the bank (even though they are BoE and is expected in the mailbox)
- Redid rep requirements for the lords/dukes quests at Cenarion Hold.
> Abyssal Contacts Rep Requirement: Honored > None
> Aurel Goldleaf Rep Requirement: None > Friendly
> Dukes of the Council Rep Requirement: Honored > Friendly 
> Bor Wildmane Rep Requirement: None > Friendly
> Signet of the Dukes Rep Requirement: Revered > Friendly
> Goldleaf's Discovery Rep Requirement: None > Revered
> Bor Wishes to Speak Rep Requirement: None > Revered

3.21 (2026-01-27)
- Went through all addon files and cleaned up old/unused code, reducing filesize.
- Removed the 3.15 warning from the about page.
- Fixed lua errors happening if RXP or Questie addons aren't installed/enabled, when tbcprep checks if their quest automation is on.
- Companion: Fixed 'Bank Collect' not working if you didn't have room in the main backpack.
- Added many outland/tbc flight paths to our flightpath tracker
- Added a new command "/tbc resetmarkeditems" that resets all items that are marked to be stored elsewhere (alt, mailbox)