@@ -10,6 +10,7 @@ Changelog:
 - Clarified that the "The Truth Comes Crashing Down" prequest comes from an item, not from EPL Town
 - Added the "Frostwolf Insignia" items as required for the AV Reputation quests, so the companion will loot it from the bank.
 - Required item count from ignored quests is no longed added to the needed count on the Items tab, if a nonignored quest also needed that item.
+- Fix Armanents of War quests being multiple for some classes
 
 3.22 (2026-01-29)
 - Finished RXP Turn-in guide for Solo Route.
